################################################################################
#                           nxAutoNuke - Change Log                            #
################################################################################

nxAutoNuke v2.2.0 (XXX XX, 2005):
  NEW: Moved to the modified BSD license.

nxAutoNuke v2.1.0 (Aug 11, 2005):
  NEW: Updated to work with nxTools v0.9.11.
  CHG: The ioA version is distributed separately now.

nxAutoNuke v2.0.2 (Apr 03, 2005):
  FIX: An incorrect cookie was used for the ANUKEKEYWORD bot skin.
  FIX: Nuke times were shown in seconds instead of minutes for nxTools/dZSbot announces.

nxAutoNuke v2.0.1 (Mar 28, 2005):
  FIX: Fixed a few typos.
  FIX: Forgot to remove some debug code (again).

nxAutoNuke v2.0.0 (Mar 27, 2005):
  NEW: Installation instructions for nxTools and dZSbot.
  CHG: Nearly configuration options have changed.
  CHG: Redesigned nxAutoNuke, much more efficient now.
  CHG: Updated the nxTools-compatible nuker to reflect the changes made to nxNuke.

nxAutoNuke v1.2.0 (Jan 24, 2005):
  NEW: Added the nuke multiplier to warnings (%multi).
  NEW: Added an option to ban keywords in release names. Similar to the "banned"
       feature, but more accurate and efficient.
  CHG: UTC conversions are now done properly with the -gmt switch.
  FIX: IMDB year checking was broken.

nxAutoNuke v1.1.2 (Jan 20, 2005):
  FIX: Warnings were broken, small typo on my part.

nxAutoNuke v1.1.1 (Jan 19, 2005):
  FIX: Whoops! Left some debug code in that nuked any failing release.

nxAutoNuke v1.1.0 (Jan 19, 2005):
  NEW: Added specific ioBanana installation instructions.
  NEW: Added uploader list to warnings, please update your sitebot skin and variables.
  CHG: All violating disk directories (CD/DVD/Disc) are displayed.
  CHG: Most configuration options have changed in some way.
  CHG: The BadExt and MissingExt options are matched against the full file name.